Fixed an issue with unwanted scroll behavior on iOS.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -4,8 +4,9 @@
 /*  All devices with a smaller resolution than the current OTRS minimum solution */
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
 
-    body {
+    body, html {
         font-size: 1em;
+        overflow-x: hidden;
     }
 
     .ArticleBody {
@@ -721,6 +722,10 @@
         padding: 0px;
         display: inline-block;
         margin-bottom: -4px;
+    }
+
+    .TicketZoom .Actions form select {
+        max-width: 200px;
     }
 
     .TicketZoom .Actions li:after {
